--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="bg-dark">
+  <body>
+  <div class="container">
+      <div class="nav-bar d-flex justify-content-center align-items-center pt-5">
+      <div class="logo">
+        <span class=" text-custom1 text-primary" >Weather</span><span class="text-custom"> App</span>
+      </div>
+    </div>
+  </div>
     <div class="container">
       <div class="mb-3 mt-5 position-relative">
         <input
